change piwik url

--- a/application/modules/default/views/layout/static_content.phtml
+++ b/application/modules/default/views/layout/static_content.phtml
@@ -75,7 +75,7 @@
       _paq.push(['trackPageView']);
       _paq.push(['enableLinkTracking']);
       (function() {
-        var u="//piwik.pling.com/";
+        var u="//piwik.opendesktop.org/";
         _paq.push(['setTrackerUrl', u+'piwik.php']);
         _paq.push(['setSiteId', '<?= $piwikid ?>']);
         var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
