--- a/application/modules/default/views/layout/flat_ui_template.phtml
+++ b/application/modules/default/views/layout/flat_ui_template.phtml
@@ -169,7 +169,7 @@ echo $this->render('partials/propagateLogout.phtml');
       _paq.push(['trackPageView']);
       _paq.push(['enableLinkTracking']);
       (function() {
-        var u="//piwik.pling.com/";
+        var u="//piwik.opendesktop.org/";
         _paq.push(['setTrackerUrl', u+'piwik.php']);
         _paq.push(['setSiteId', '<?= $piwikid ?>']);
         var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
