--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -351,6 +351,10 @@ out: ../css/style.css, sourcemap: true, compress: true
           }
         }
         .dropdown-menu {
+          &::before {
+            right: 6px;
+          }
+          
           #user-info-section {
             height: auto;
             padding: 20px;
