--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -792,11 +792,11 @@ $tagmodel = new Default_Model_Tags();
                                 <?php if (Zend_Auth::getInstance()->hasIdentity()) {      ?>
                                        <a data-toggle="modal" data-target="#report-product-clone-<?= $this->product->project_id ?>" role="button"
                                           href="#report-product-clone-<?= $this->product->project_id ?>">
-                                            add credits
+                                            report clone -- add credits
                                        </a>
                                    <?php }else{ ?>
                                             <a data-toggle="modal" data-target="#like-product-modal" role="button">
-                                                 add credits
+                                                report clone -- add credits
                                             </a>
                                    <?php } ?>
 
