--- a/application/modules/backend/views/scripts/tags/index.phtml
+++ b/application/modules/backend/views/scripts/tags/index.phtml
@@ -110,7 +110,7 @@
                                             title: 'Is active',
                                             width: '30%',
                                             type: 'checkbox',
-                                            values: { '0': 'No', '1': 'Yes' },
+                                            values: { '0': 'No', '1': '' },
                                             defaultValue: '1',
                                         }
                                     }
