--- a/application/modules/default/views/scripts/credits/index.phtml
+++ b/application/modules/default/views/scripts/credits/index.phtml
@@ -22,9 +22,12 @@
  * Created: 31.05.2017
  */
 
+
+$this->headTitle('Clones', 'SET');
 $model = new Default_Model_ProjectClone();
 $credits = $model->fetchCredits();
 ?>
+
 <style type="text/css">
         img.reporterimage
         {
@@ -98,7 +101,7 @@ $credits = $model->fetchCredits();
                 <div class="sidebar-left col-md-1"></div>
                 <div class="content col-md-10">
                 <h2>
-                     List of credits
+                     List of clones
                 </h2>
                 <?php if(count($credits)>0)
                 {
