--- a/application/modules/default/views/scripts/authorization/login.phtml
+++ b/application/modules/default/views/scripts/authorization/login.phtml
@@ -47,6 +47,7 @@ $this->headMeta()->setName('robots', 'noindex, nofollow');
                 <h3></h3>
 
                 <div id="social-login-elements">
+                  <?php /*
                   <div class="register-facebook">
                     <p class="small center light greylight">Login with</p>
                     <a  href="/login/github/<?=$url_param_redirect?>" class="btn btn-block btn-social btn-github" rel="nofollow">
@@ -54,7 +55,8 @@ $this->headMeta()->setName('robots', 'noindex, nofollow');
                       <span class="small">Github</span>
                     </a>
                   </div>
-
+                  */ ?>
+                          
                   <div class="bottom margin-top-15">
                     <a  href="/login/ocs/<?=$url_param_redirect?>" class="btn btn-block btn-social btn-github">
                         <span class="glyphicon glyphicon-log-in"></span>
