--- a/application/modules/default/views/scripts/authorization/register.phtml
+++ b/application/modules/default/views/scripts/authorization/register.phtml
@@ -41,7 +41,7 @@ $this->headMeta()->setName('robots', 'noindex, nofollow');
                     <h3></h3>
 
                     <div id="social-login-elements">
-                        <?php _/*
+                        <?php /*
                         <div class="register-facebook">
                             <p class="small center light greylight">Register with</p>
                             <a  href="/login/github/" class="btn btn-block btn-social btn-github" rel="nofollow">
