--- a/application/modules/default/views/scripts/authorization/register.phtml
+++ b/application/modules/default/views/scripts/authorization/register.phtml
@@ -41,6 +41,7 @@ $this->headMeta()->setName('robots', 'noindex, nofollow');
                     <h3></h3>
 
                     <div id="social-login-elements">
+                        <?php /*
                         <div class="register-facebook">
                             <p class="small center light greylight">Register with</p>
                             <a  href="/login/github/" class="btn btn-block btn-social btn-github" rel="nofollow">
@@ -48,7 +49,7 @@ $this->headMeta()->setName('robots', 'noindex, nofollow');
                                 <span class="small">Github</span>
                             </a>
                         </div>
-
+                        */ ?>
                         <div class="bottom margin-top-15">
                             <div id="show-login-description" class="small light lightgrey">Already have an account?</div>
                             <div class="login2">
