--- a/application/modules/default/views/layout/flat_ui_template.phtml
+++ b/application/modules/default/views/layout/flat_ui_template.phtml
@@ -56,6 +56,14 @@
     <script src="/theme/flatui/js/lib/jquery-3.2.1.min.js" ></script>
     <script src="/theme/flatui/js/lib/bootstrap.min.js" ></script>    
     <script type="text/javascript" src="/theme/flatui/js/lib/tooltipster/dist/js/tooltipster.bundle.min.js"></script>
+
+     <script type="text/javascript" src="/theme/react/lib/react/react.js"></script>
+    <script type="text/javascript" src="/theme/react/lib/react-dom/react-dom.js"></script>
+    <script type="text/javascript" src="/theme/react/lib/redux/redux.min.js"></script>
+    <script type="text/javascript" src="/theme/react/lib/redux/react-redux.min.js"></script>
+    <script type="text/javascript" src="/theme/react/lib/mdl/material.min.js"></script>
+    <script type="text/javascript" src="/theme/react/lib/timeago/timeago.min.js"></script>
+    <script type="text/javascript" src="/theme/react/lib/md5/md5.js"></script>
 </head>
 <body>
 
