--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -903,8 +903,9 @@ $userRoleName = $helperUserRole->userRole();
             </span>
         </div>
     </main>
-
-
+    <script>
+      var filesJson  = <?php echo $this->filesJson ?>;  // Tab files      
+    </script>
     <script type="text/javascript" src="/theme/react/getit.js"></script>
 
     <script>(function (d, s, id) {
