--- a/httpdocs/theme/react/assets/less/get-it.less
+++ b/httpdocs/theme/react/assets/less/get-it.less
@@ -3,6 +3,10 @@ out: ../css/get-it.css, sourcemap: true, compress: true
 @import "elements.less";
 @import "get-it-lib.less";
 
+#myModal {
+  padding: 0;
+}
+
 #get-it-modal {
   width: 100%;
   margin: 0 auto;
@@ -12,7 +16,7 @@ out: ../css/get-it.css, sourcemap: true, compress: true
   button.close {
     position: absolute;
     top: 20px;
-    right: 20px;    
+    right: 20px;
   }
 
   #files-tabs-container {
