--- a/httpdocs/theme/react/assets/less/get-it.less
+++ b/httpdocs/theme/react/assets/less/get-it.less
@@ -27,7 +27,7 @@ out: ../css/get-it.css, sourcemap: true, compress: true
     max-width: 100%;
 
     .files-tabs-header {
-      padding: 20px;
+      padding: 0 20px 40px 20px;
 
       h2 {
         margin: 0;
