--- a/httpdocs/theme/react/assets/less/get-it.less
+++ b/httpdocs/theme/react/assets/less/get-it.less
@@ -3,8 +3,8 @@ out: ../css/get-it.css, sourcemap: true, compress: true
 @import "elements.less";
 @import "get-it-lib.less";
 
-#myModal {
-  padding: 0;
+#get-it-modal-window {
+  padding-right: 0 !important;
 }
 
 #get-it-modal {
