--- a/httpdocs/theme/react/assets/less/get-it.less
+++ b/httpdocs/theme/react/assets/less/get-it.less
@@ -61,7 +61,13 @@ out: ../css/get-it.css, sourcemap: true, compress: true
       tr {
         td,th {
           text-align: left;
+          .download-button {
+            padding: 3px 5px;
+          }
         }
+        th {
+          color:#4e4e4e !important;
+        }        
       }
     }
   }
