--- a/httpdocs/theme/react/assets/less/get-it.less
+++ b/httpdocs/theme/react/assets/less/get-it.less
@@ -61,13 +61,14 @@ out: ../css/get-it.css, sourcemap: true, compress: true
       tr {
         td,th {
           text-align: left;
+          padding: 5px !important;
           .download-button {
             padding: 3px 5px;
           }
         }
         th {
           color:#4e4e4e !important;
-        }        
+        }
       }
     }
   }
