--- a/httpdocs/theme/react/assets/less/get-it.less
+++ b/httpdocs/theme/react/assets/less/get-it.less
@@ -63,6 +63,7 @@ out: ../css/get-it.css, sourcemap: true, compress: true
           text-align: left;
           padding: 5px !important;
           .download-button {
+            color: white;
             padding: 3px 5px;
           }
         }
