--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -354,7 +354,7 @@ out: ../css/style.css, sourcemap: true, compress: true
           &::before {
             right: 6px;
           }
-          
+
           #user-info-section {
             height: auto;
             padding: 20px;
@@ -1065,11 +1065,131 @@ table {
   }
 }
 
+.product-carousel {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #eaeaea;
+
+  .product-carousel-header {
+    h2 {
+      font-size: 25px !important;
+    }
+  }
+
+  .product-carousel-wrapper {
+    width: 100%;
+    height: 120px;
+    position: relative;
+
+    .product-carousel-left {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+    }
+
+    .product-carousel-right {
+      right:0;
+      position: absolute;
+      top: 0;
+      width: 10px;
+      height: 100%;
+    }
+
+    .carousel-arrow {
+      position: absolute;
+      top: 50%;
+      width: 50px;
+      height: 50px;
+      margin-top: -35px;
+      border-radius: 100%;
+      border:1px solid #ccc;
+      background-color: white;
+      z-index: 10;
+      margin-left: -25px;
+      cursor: pointer;
+      opacity: 0;
+      .transition();
+
+      i {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -12px;
+        margin-top: -12px;
+      }
+    }
+
+    &:hover {
+      .carousel-arrow {
+        opacity: 1;
+      }
+    }
+  }
+
+  .product-carousel-container {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    height: 120px;
+
+    .product-carousel-slider {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 120px;
+      .transition();
+    }
+
+    .product-carousel-item {
+      float: left;
+      height: 120px;
+
+      figure {
+        margin: 0;
+        width: 100%;
+        float: left;
+        margin-bottom: 10px;
+
+        img {
+          height: 48px;
+          width: 48px;
+          float: left;
+        }
+      }
+
+      .product-info {
+        span {
+          display: block;
+          float: left;
+          width: 100%;
+          height: 22px;
+          line-height: 22px;
+
+          &.product-info-title {
+            color: #007aa6;
+            font-weight: 400 !important;
+          }
+
+          &.product-info-user {
+            color: #666;
+          }
+        }
+      }
+    }
+  }
+}
+
 #app-root {
   font-family: Source Sans Pro,Source Sans,sans-serif;
   font-size: 13pt;
   font-weight: 400;
   line-height: 1.8;
+
+  section.section {
+    &:first-of-type {
+      background-color: #e5eeee;
+    }
+  }
 
   .container {
     width: 100% !important;
